# TrigHype

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: test.yml
src/lib/: hyperbolic.c  trig_math.c  trigonometric.c
src/lib/include/: hyperbolic.h  trig_math.h  trighype.h  trigonometric.h
src/tests/: tests.c  tests.h
